Fixed the no rsvp

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Wedding Website">
+    <meta name="description" content="Michelle and William 2019 Wedding Website. We do not support Internet Explorer or Edge.">
+    <meta property="og:title" content="Michelle and William 2019" />
+    <meta property="og:url" content="https://willandmich19.github.io/" />
+    <meta property="og:description" content="Michelle and William 2019 Wedding Website">
+    <meta property="og:image" content="images/link_preview_image.jpg">
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
     <meta name="author" content="William Wong">
 
     <!-- Optional JavaScript -->
@@ -19,6 +25,7 @@
 
     <!-- Custom JavaScript (If any) -->
     <script src="js/jquery.cookie.js"></script>
+    <script src="js/jquery.form.min.js"></script>
     <script src="js/timer.js"></script>
     <script src="js/scrollspysmoothanimate.js"></script>
     <script src="js/navigationclickhide.js"></script>
@@ -102,7 +109,8 @@
     <section id="info" class="info">
         <aside class="info_frame">
             <h1 class="info_fancyfont">Message for You</h1>
-            <p><span class="no-widow">Michelle and</span>  William kindly invite you to join in celebrating this joyful moment of their lives. Don’t forget to RSVP and let us know about any dietary preferences too. Thanks so much for all of your love and support so far! We can’t wait to celebrate this special day with all of our favourite people.<span class="no-widow"></span></p>
+            <p><span class="no-widow">Michelle and</span>  William kindly invite you to join in celebrating this joyful moment of their lives. We ask that you kindly RSVP with the form below indicating whether you will be attending or not. If you will be attending, please list all names of the attendees and let us know about any dietary <span class="no-widow">preferences too.</span></p> 
+            <p><span class="no-widow">Thanks so</span> much for all of your love and support so far! We can’t wait to celebrate this special day with all of our favourite people.<span class="no-widow"></span></p>
             <hr />
             <h2 class="info_weddingdate">July 12, 2019 at 9:30am</h2>
             
@@ -114,7 +122,7 @@
         <h1 class="crew_fancyfont">Meet the Crew</h1>
         <div class="d-flex flex-row justify-content-between flex-wrap">
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/home_image02.jpg" alt="William and Michelle Engagment Shoot" />
                 <figcaption>
                     <h2>Michelle San Luis & William Wong</h2>
                     <p><em>Bride & Groom</em></p>
@@ -123,13 +131,11 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Michelle & William</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">Michelle and</span> William have known each other for almost 6 years now. We were briefly introduced at our friend's BBQ (John Clemente) but we really got to know each other much better when we went to the Scarborough Bluff's beach. Ever since that day, we had fallen in love and we continued to do so up to this day. This also has been nothing but memorable moments between those two ever since. Michelle's hate for animals and William's love for animals is what we can say, opposites do attract each other. While that is just a sample, there are many things that they have opposites in and they believe this is what keeps this relationship <span class="no-widow">going forward.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Jamielyn Camposano" />
                 <figcaption>
                     <h2>Jamielyn Camposano</h2>
                     <p><em>Maid of Honor</em></p>
@@ -145,7 +151,7 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Paulo Aquino" />
                 <figcaption>
                     <h2>Paulo Aquino</h2>
                     <p><em>Best man</em></p>
@@ -154,28 +160,25 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Paulo Aquino</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">William has</span> known Paulo since out high school days at Francis
+                        Libermann Catholic High School. They did not really know each other till grade 11 computer science class. That time Paulo was trying to be an A+ student sitting in the front while William was doing the opposite sitting in the back. What they really got together was their love for computer games that time, aka Shattered Galaxy and checking girls out at <span class="no-widow">the gym.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Charlene Lopez" />
                 <figcaption>
                     <h2>Charlene Lopez</h2>
                     <p><em>Bridesmaid</em></p>
                 </figcaption>
                 <details>
                     <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Jamielyn Camposano</span></p>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Charlene Lopez</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">Michelle and</span> Charlene first met as kids at a family gathering thrown by Michelle's aunt (Charlene's aunt in law). Their friendship sustained all these years with Michelle having been one of Charlene's Bridesmaids back <span class="no-widow">in 2011.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="John Clemente" />
                 <figcaption>
                     <h2>John Clemente</h2>
                     <p><em>Groomsman</em></p>
@@ -184,20 +187,18 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">John Clemente</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">William and</span> John first met not in real life, but in cyberspace. (To be exact it was World of Warcraft: Classic in 2006 or 2007). William was playing a Rogue class and soon to later find out that John also played a Rogue class as well. It is their understanding of this class and its mechanics that brought them together in not only cyberspace but also into the future of playing real <span class="no-widow">sports together.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Koulla Martin" />
                 <figcaption>
                     <h2>Koulla Martin</h2>
                     <p><em>Bridesmaid</em></p>
                 </figcaption>
                 <details>
                     <summary>
-                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Jamielyn Camposano</span></p>
+                        <p><span class="no-widow">Read up</span> on <span class="no-widow">Koulla Martin</span></p>
                     </summary>
                     <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
                         Libermann. We
@@ -205,7 +206,7 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Ryan De Guzman" />
                 <figcaption>
                     <h2>Ryan De Guzman</h2>
                     <p><em>Groomsman</em></p>
@@ -214,13 +215,11 @@
                     <summary>
                         <p><span class="no-widow">Read up</span> on <span class="no-widow">Ryan De Guzman</span></p>
                     </summary>
-                    <p><span class="no-widow">I have</span> known Paulo since out high school days at Francis
-                        Libermann. We
-                        did not really know each other till grade 11 computer <span class="no-widow">science class.</span></p>
+                    <p><span class="no-widow">Willam and</span> Ryan first met during our first ever freshman year at Seneca College @ York University. They were both taking the computer programming course and later to find out both of them "lost passion" doing it. When mentioning "lost passion", it means that both of them skip class to play computer games. The days of Unreal Tournament, Medal of Honor and Warcraft 3 is what kept them together but it was our love for Diablo 2 (They played till 3am with an 8am class in the morning) that made their friendship solid. This friendship eventually led them to keep in touch and sustained throughout all <span class="no-widow">these years.</span></p>
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Megan MacDonald" />
                 <figcaption>
                     <h2>Megan MacDonald</h2>
                     <p><em>Bridesmaid</em></p>
@@ -235,7 +234,7 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Warren Rego" />
                 <figcaption>
                     <h2>Warren Rego</h2>
                     <p><em>Groomsman</em></p>
@@ -250,7 +249,7 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Miley Anne San Luis" />
                 <figcaption>
                     <h2><span class="no-widow">Miley Anne</span> <span class="no-widow">San Luis</span></h2>
                     <p><em>Flowergirl</em></p>
@@ -263,7 +262,7 @@
                 </details>
             </figure>
             <figure class="figure p-3 flex-item">
-                <img class="figure-img" src="images/crew1.jpg" alt="best man" />
+                <img class="figure-img" src="images/crew1.jpg" alt="Adam Aquino" />
                 <figcaption>
                     <h2>Adam Aquino</h2>
                     <p><em>Ring/Coin Bearer</em></p>
@@ -311,13 +310,16 @@
                     <p><span class="no-widow"><strong>Place:</strong> The</span> Venetian Banquet &#x26; <span class="no-widow">Hospitality Centre</span></p>
                 </li>
                 <li>
-                    <p><span class="no-widow"><strong>Address:</strong>219</span> Romina Dr, Concord, ON <span class="no-widow">L4K 4V3, Canada</span></p>
+                    <p><span class="no-widow"><strong>Address:</strong> 219</span> Romina Dr, Concord, ON <span class="no-widow">L4K 4V3, Canada</span></p>
                 </li>
                 <li>
                     <p><strong>Time:</strong> 5:00 pm</p>
                 </li>
                 <li>
                     <p><strong>Event:</strong> Reception</p>
+                </li>
+                <li>
+                    <p><span class="no-widow"><strong class="underline">Note:</strong> In</span> honour of Chinese tradition where the bride wears red and respect to both the bride & groom. We ask you to please refrain from wearing that colour to this event. <span class="no-widow">Thank You.</span></p>
                 </li>
             </ul>
             <iframe id="church_map" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB-4r9Lah2Krz_hI-JzjLYhJ4btSAktmss&q=The+Venetian+Banquet+%26+Hospitality+Centre,Vaughan+ON&center=43.8173482, -79.5323094&zoom=15"
@@ -332,7 +334,8 @@
             <h1 class="rsvp_fancyfont">R.S.V.P.</h1>
             <p><span class="no-widow"><span class="text-danger">*</span> are</span> <span class="no-widow">required fields.</span></p>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSd7EGc9gQrEO_Jul4VqT9F-_7RIL_AB8Jpbdb6fDuvXflWdvA/formResponse" target="hidden_iframe" id="gForm" method="POST" name="gForm">
-                <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+            <!--<form action="" target="hidden_iframe" id="gForm" method="POST" name="gForm">-->
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
                 <div class="form-group">
                     <label for="selectTitle">Title <span class="text-danger">*</span></label>
                     <select class="form-control" id="entry.239982359" name="entry.239982359">
@@ -363,7 +366,7 @@
                 <!-- Nav tabs -->
                 <div class="form-group">
                     <label for="tabsYesNo">RSVP <span class="text-danger">*</span></label>
-                    <input type="hidden" id="entry.562112224" name="entry.562112224" value="yes">
+                    <input type="text" style="visibility: hidden; display: none;" id="entry.562112224" name="entry.562112224" value="yes">
                     <ul class="nav nav-tabs" role="tablist" id="tabsYesNo">
                         <li class="nav-item">
                             <a id="rsvpYes" class="nav-link active" href="#displayYes" role="tab" data-toggle="tab" value="rsvpYes">Yes</a>
@@ -406,7 +409,7 @@
                                     <p>Roasted Potatoes and Veggies</p>
                                 </li>
                             </ul>
-                            <p><em><span class="no-widow">Yes, this</span> will be an <span class="no-widow">open bar.</span></em></p>
+                            <p class="underline"><em><span class="no-widow underline">Yes, this</span> will be an <span class="no-widow underline">open bar.</span></em></p>
 
                             <div class="form-group">
                                 <label for="textareaSpecialInstructions">Special Instructions (Optional)</label>
@@ -421,7 +424,9 @@
                                 <input type="submit" class="btn btn-disabled form-control" name="inputSubmitYes" id="inputSubmitYes" value="Submit" disabled="disabled" data-toggle="modal" data-target="#submitModal">
                             </div>
 
-                            <p class="smalltext"><span class="no-widow">While gifts</span> are not mandatory. If you choose to bring any, no <span class="no-widow">large gifts.</span></p>
+                            <br/>
+                            <p class="smalltext"><span class="no-widow">Gift Wish</span></p>
+                            <p class="smalltext"><em><span class="no-widow">Our lives</span> together has already begun, we have almost everything under the sun. If you should wish to buy us a gift, a little extra money will give us a lift in our journey together as husband and wife. But most importantly, we request, you share our day as our wedding guests. Now that we have saved you any fuss, we cannot wait for you to celebrate <span class="no-widow">with us!</span></em></p>
                         </div>
                         <div id="displayNo" class="tab-pane fade">
                             <h2 class="rsvp_h2"><span class="no-widow">No, you</span> have decline with regrets. Please click submit <span class="no-widow">to finish.</span></h2>
